Got templates working

--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -1,1 +1,9 @@
-<h1>Hello! {{time}}</h1>
+<html>
+	<head>
+	<title>Testing Title</title>
+	</head>
+<h1>Hello, {{name}}</h1>
+<body>
+<div id="text">Your id is {{id}} which is a fine id</div>
+</body>
+</html>
