Working on forms, redirect not working properly

--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -5,5 +5,27 @@
 <h1>Hello, {{name}}</h1>
 <body>
 <div id="text">Your id is {{id}} which is a fine id</div>
+
+    <form name="login" action="http://localhost:3000/" method="post">
+         <table width="380" border="0">
+     <tbody><tr>
+      <td width="99">
+        <span style="color:#999">username :</span></td>
+      <td>
+        <input name="username" size="20" type="text"></td>
+     </tr>
+     <tr>
+      <td>
+        <span style="color:#999">password :</span></td>
+      <td>
+        <input name="password" size="20" type="password"></td>
+     </tr>
+     <tr>
+        <td></td>
+      <td><input value="log in" type="submit"> [<a href="https://pinboard.in/password_reset/">lost password</a>]</td>
+     </tr>
+     </tbody></table>
+    </form>
+
 </body>
 </html>
